--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -1,3 +1,5 @@
+Hello I'm Garvey Peka a Senior Shopify Developer
+
 {% assign main_menu_linklist = linklists[section.settings.menu].links %}
 
 <div class="relative bg-white" x-data="{ mobileMenuOpen: true }">
